clusters/homelab/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  namespace: production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: production-rewrite-harbor-prefix@kubernetescrd,production-strip-harbor-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: homelab.towelie.dev
      http:
        paths:
          - path: /harbor
            pathType: Prefix
            backend:
              service:
                name: harbor-portal
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-harbor-prefix
  namespace: production
spec:
  stripPrefix:
    prefixes:
      - /harbor
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-harbor-prefix
  namespace: production
spec:
  replacePathRegex:
    regex: "^/harbor/(.*)"
    replacement: "/$1"
